Fix gallery image stretching issue

--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -412,6 +412,7 @@ hr{
   width: 350px;
   transform: scale(1.0);
   transition: transform 0.4s ease;
+  object-fit: cover;
 }
 
 .img-box {
